added more styling to the weather dashboard along with a modal component and error messages

--- a/weather-dashboard/public/index.html
+++ b/weather-dashboard/public/index.html
@@ -4,6 +4,8 @@
 <head>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtD5X9qcRJBsJ05Ut4mLLqnZ-87zTfqRM&libraries=places" async defer></script>
 
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" href="%PUBLIC_URL%/sun-icon.png" />
